// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.actions;

import "data/app/app_info.proto";

option go_package = "personal-website-v2/go-data/actions;actions";

// Proto file describing the Transaction.

// The transaction.
message Transaction {
    // The unique ID to identify the transaction.
    string id = 1;

    // The app info.
    personalwebsite.app.AppInfo app = 2;

    // The app session ID.
    uint64 app_session_id = 3;

    // The date and time (in microseconds) at which the transaction was created.
    int64 created_at = 4;

    // The date and time (in microseconds) at which the transaction was started.
    int64 start_time = 5;
}
